[package]
name = "steam-audio"
version = "0.2.0"
authors = ["germän gômez <germangb42@gmail.com>"]
description = "Rust bindings for Valve Software's binaural audio rendering library."
repository = "https://github.com/germangb/steam-audio-rs.git"
readme = "README.md"
keywords = ["steam", "audio", "vr", "binaural", "gamedev"]
categories = ["multimedia::audio", "games", "development-tools::ffi", "simulation"]
license-file = "LICENSE.md"

[dependencies]

[build-dependencies]
bindgen = "0.32.3"
