[package]
name = "steam-audio-sys"
version = "0.3.0"
edition = "2021"
authors = ["germän gômez <germangb42@gmail.com>", "Connor McCluskey <conmcclusk@gmail.com>"]
description = "Wrapper library for using steam audio in rust"
repository = "https://github.com/aceeri/steam-audio-rs.git"
readme = "README.md"
keywords = ["steam", "audio", "vr", "binaural", "gamedev", "hrtf", "phonon", "acoustics"]
categories = ["multimedia::audio", "games", "simulation"]
license-file = "LICENSE.md"
build = "build.rs"

[dependencies]
glam = "*"
lewton = "*"

[build-dependencies]
bindgen = "0.59.2"

[dev-dependencies]