[package]
name = "steam-audio"
version = "0.3.0"
edition = "2021"
authors = ["Connor McCluskey <conmcclusk@gmail.com>"]
description = "Rust wrapper for Valve Software's binaural audio rendering library."
repository = "https://github.com/aceeri/steam-audio-rs.git"
readme = "README.md"
keywords = ["steam", "audio", "vr", "binaural", "gamedev"]
categories = ["multimedia::audio", "games", "simulation"]
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
steam-audio-sys = "0.3.0"
glam = "0.20.2"
lewton = "0.10.2"
bitflags = "1.3.2"
rodio = "0.15.0"

[dev-dependencies]

[[example]]
name = "wrapper"
path = "examples/wrapper.rs"
